[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/SubOptionMenu.gd" type="Script" id=1]
[ext_resource path="res://gui/Description.gd" type="Script" id=2]
[ext_resource path="res://gui/CombatMenu.gd" type="Script" id=3]

[node name="CombatMenu" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -160.0
margin_right = 448.0
margin_bottom = -16.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.008
margin_bottom = -0.0160065
color = Color( 0, 0, 0, 0.505882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect/HBoxContainer"]
margin_right = 128.0
margin_bottom = 145.0
rect_min_size = Vector2( 128, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_left = 138.0
margin_right = 293.0
margin_bottom = 145.0
custom_constants/margin_top = 5

[node name="VContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/OptionsMenu"]
margin_top = 5.0
margin_right = 155.0
margin_bottom = 145.0
rect_min_size = Vector2( 155, 0 )
mouse_filter = 0

[node name="SubOptionMenu" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_left = 303.0
margin_right = 721.0
margin_bottom = 145.0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/HBoxContainer/SubOptionMenu"]
margin_top = 5.0
margin_right = 418.0
margin_bottom = 140.0
rect_min_size = Vector2( 418, 0 )
size_flags_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="ColorRect/HBoxContainer/SubOptionMenu/ScrollContainer"]
margin_right = 418.0
size_flags_horizontal = 3
columns = 2

[node name="Description" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_left = 731.0
margin_right = 896.0
margin_bottom = 145.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5
script = ExtResource( 2 )

[node name="Description" type="RichTextLabel" parent="ColorRect/HBoxContainer/Description"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 140.0
size_flags_horizontal = 7
bbcode_enabled = true

[connection signal="skill_select" from="ColorRect/HBoxContainer/SubOptionMenu" to="." method="_on_SubOptionMenu_skill_select"]
